# pl_0

./: Cargo.toml  LICENSE  README.md  TODO.md  pcode1.txt  pcode2.txt  structure.drawio
doc/: BNF.md  proof_bnf_is_ll1.md
examples/correct/: arith_test.pas  cond_test.pas  fib.pas  multi_arg.pas  nested_proc.pas  no_arg_proc.pas  one_plus_two.pas  simple_proc.pas  sum_a_to_b.pas  test.pas
examples/lexer/: chinese_programming.pas  japanese_programming.pas  one_plus_two.pas  single_colon.pas  unsupported_ascii_char.pas
examples/parser/: chinese_in_keyword.pas  losing_eqsign.pas  losing_prog_id.pas  losing_rvalue.pas  multi_err.pas  wrong_if.pas
examples/semantic/: assign_to_const_proc.pas  multi_def.pas  undef.pas  wrong_arg_num.pas  wrong_args_list_len.pas  wrong_args_num.pas
examples/snap/: multi_arg.pas
src/: lib.rs  main.rs
src/ast/: mod.rs
src/bytecode/: advanced.rs  basic.rs  mod.rs
src/codegen/: desc.rs  mod.rs
src/direct_parser/: bnf_frame.rs  desc.rs  detailed_method.rs  mod.rs
src/error/: compile_error.rs  error_builder.rs  mod.rs  runtime_error.rs  traits.rs
src/lexer/: methods.rs  mod.rs  prelude.rs  token_def.rs
src/optimizer/: mod.rs
src/parser/: methods.rs  mod.rs  synchronizer.rs
src/parser/synchronizer/: tables.rs
src/pcode/: mod.rs
src/pest_parser/: grammar.pest  mod.rs
src/symbol_table/: mod.rs  sym_type.rs  table_row.rs
src/translator/: mod.rs
src/util/: bnf.rs  mod.rs
src/value/: mod.rs
src/vm/: advanced.rs  basic.rs  mod.rs
src/vm/lib/: io.rs  mod.rs
